Bug 1200851 - DataStoreService should update its permission map when the homescreen changes, r=fabrice