dom/apps/AppsService.js
@@ -166,6 +166,10 @@ AppsService.prototype = {
     return UserCustomizations.isFromExtension(aURI);
   },
 
+  updateDataStoreEntriesFromLocalId: function(aLocalId) {
+    return DOMApplicationRegistry.updateDataStoreEntriesFromLocalId(aLocalId);
+  },
+
   classID : APPS_SERVICE_CID,
   QueryInterface : XPCOMUtils.generateQI([Ci.nsIAppsService])
 }
